--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,153 @@
-:root { --Violet: hsl(257, 40%, 49%); } body { margin: 0; background-image: url("../images/bg-mobile.svg"); background-color: var(--Violet); background-repeat: no-repeat; background-size: 100%; font-weight: 400; font-family: 'Open Sans', sans-serif; color: white; } header { padding: 30px; } header .logo { width: 140px; } main { margin: 18px 10px; text-align: center; } main .mockups { width: 85%; margin: 10px 0 30px 0; } .content { width: 85%; margin: 0 auto; } .content h1 { color: white; font-family: 'Poppins', sans-serif; text-transform: capitalize; font-size: 7vw; } .content p { font-size: 16px; line-height: 150%; margin-bottom: 30px; } .content .button { width: 230px; height: 50px; border-radius: 30px; border: transparent; color: var(--Violet); font-size: 16px; margin-bottom: 20px; box-shadow: 0 2px 3px 0px black; outline: none; } .content .button:hover { transform: scale(1.1); transition: 0.3s; } .icons { display: flex; justify-content: center; margin: 40px auto; } .icons .fab{ font-size: 20px; line-height: 40px; height: 40px; width: 40px; border: 1px solid white; border-radius: 50%; margin-right: 20px; text-align: center; } .icons .fab:last-of-type { margin-right: 0px; }
+:root {
+  --Violet: hsl(257, 40%, 49%);
+}
+body {
+  margin: 0;
+  background-image: url("../images/bg-mobile.svg");
+  background-color: var(--Violet);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  font-weight: 400;
+  font-family: "Open Sans", sans-serif;
+  color: white;
+}
+@media (min-width: 768px) {
+  body {
+    background-image: url("../images/bg-desktop.svg");
+    background-size: 150%;
+    margin: 30px 40px;
+  }
+}
+@media (min-width: 1440px) {
+  body {
+    background-image: url("../images/bg-desktop.svg");
+    background-size: 83%;
+  }
+}
+header {
+  padding: 30px;
+}
+@media (min-width: 768px) {
+  header {
+    padding-left: 0;
+  }
+}
+header .logo {
+  width: 140px;
+}
+@media (min-width: 768px) {
+  header .logo {
+    width: 200px;
+  }
+}
+main {
+  margin: 18px 10px;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  main {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    justify-content: center;
+  }
+}
+main .mockups {
+  width: 85%;
+  margin: 10px 0 30px 0;
+}
+@media (min-width: 768px) {
+  main .mockups {
+    width: 100%;
+  }
+}
+.content {
+  width: 85%;
+  margin: 0 auto;
+}
+@media (min-width: 768px) {
+  .content {
+    text-align: left;
+    position: relative;
+  }
+}
+.content h1 {
+  color: white;
+  font-family: "Poppins", sans-serif;
+  text-transform: capitalize;
+  font-size: 7vw;
+}
+@media (min-width: 768px) {
+  .content h1 {
+    font-size:30px;
+  }
+}
+@media (min-width: 1440px) {
+  .content h1 {
+    font-size:38px;
+    margin: 60px 100px 20px 0;
+  } 
+}
+.content p {
+  font-size: 16px;
+  line-height: 150%;
+  margin-bottom: 30px;
+}
+@media (min-width: 768px) {
+  .content p {
+    font-size: 20px;
+  }
+}
+.content .button {
+  width: 230px;
+  height: 50px;
+  border-radius: 30px;
+  border: transparent;
+  color: var(--Violet);
+  font-size: 16px;
+  margin-bottom: 20px;
+  box-shadow: 0 2px 3px 0px black;
+  outline: none;
+}
+@media (min-width: 768px) {
+  .content .button {
+    font-size: 20px;
+  }
+}
+.content .button:hover {
+  transform: scale(1.1);
+  transition: 0.3s;
+}
+.icons {
+  display: flex;
+  justify-content: center;
+  margin: 40px auto;
+}
+@media (min-width: 768px) {
+  .icons {
+    position: absolute;
+    right: 50px;
+    bottom: 20px;
+    margin: 0;
+  }
+}
+@media (min-width: 1440px) {
+  .icons {
+    position: absolute;
+    right: 60px;
+    bottom: 40px;
+    margin: 0;
+  }
+}
+.icons .fab {
+  font-size: 20px;
+  line-height: 40px;
+  height: 40px;
+  width: 40px;
+  border: 1px solid white;
+  border-radius: 50%;
+  margin-right: 20px;
+  text-align: center;
+}
+.icons .fab:last-of-type {
+  margin-right: 0px;
+}
